--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js" defer></script>
+    <script src="./js/logic.js" defer></script>
+
 </head>
 
 <body>
